@@ -21,6 +21,7 @@ Sigma Informatique
 Nicolas Dupeux
 Justin Burnham
 Franky Van Liedekerke
+Pierre Mavro
 
 
 STYLES:
