@@ -37,6 +37,7 @@
 <input type="hidden" name="hidetop" id="hidetop" value="[% hidetop %]">
 <input type="hidden" name="title" id="title" value="[% custom_title %]">
 
+[% UNLESS minimal %]
 <table border="0" width="100%" cellpadding=0 cellspacing=0>
   <tr>
     <td valign="top" align="left" width="33%" nowrap>
@@ -72,11 +73,14 @@
     </td>
   </tr>
 </table>
+[% END %]
 
 [% PROCESS _status_hostdetail_table.tt data=hosts paneprefix='hst_' sortprefix='_hst' %]
 <div class='itemTotalsTitle'>[% hosts.size %] of [% hosts.size %] Matching Host Entries Displayed</div>
-<br><br>
+<br>
 
+[% UNLESS minimal %]
+<br>
 <table border="0" width="100%" cellpadding=0 cellspacing=0>
   <tr>
     <td valign="top" align="left" width="33%" nowrap>
@@ -87,6 +91,7 @@
     <td valign="bottom" align="right" width="33%"></td>
   </tr>
 </table>
+[% END %]
 
 <script type="text/javascript">
 <!--
@@ -98,12 +103,14 @@
 <div class="statusSort" align="CENTER">Services sorted by <b>[% svc_orderby %]</b> ([% IF svc_orderdir == 'DESC' %]descending[% ELSE %]ascending[% END %])</div>
 [% END %]
 [% UNLESS authorized_for_read_only %]
+[% UNLESS minimal %]
 <div class="hint">
     <a href="#" onclick="pagetype='servicedetail';selectAllServices(true,'svc_');">select all</a> (<a href="#" onclick="pagetype='servicedetail';selectAllHosts(true,'svc_');">hosts</a>)
   - <a href="#" onclick="pagetype='servicedetail';selectAllHosts(false,'svc_');selectAllServices(false,'svc_');">unselect all</a>
   - <a href="#" onclick="pagetype='servicedetail';selectAllHosts(false,'svc_');selectAllServices(false,'svc_');selectServicesByClass(Array('.statusCRITICAL','.statusWARNING','.statusUNKNOWN'));">all problems</a>
   - <a href="#" onclick="pagetype='servicedetail';selectAllHosts(false,'svc_');selectAllServices(false,'svc_');selectServicesByClass(Array('.has_downtime'));">all with downtime</a>
 </div>
+[% END %]
 [% END %]
 [% PROCESS _status_detail_table.tt  data=services paneprefix='svc_' sortprefix='_svc' %]
 <div class='itemTotalsTitle'>[% services.size %] of [% services.size %] Matching Service Entries Displayed</div>
