@@ -12,6 +12,7 @@
 
 [% PROCESS _overdiv.tt %]
 [% PROCESS _status_cmd_pane.tt %]
+[% UNLESS minimal %]
     <table border="0" width="100%" cellspacing="0" cellpadding="0" id="top_pane"[% IF hidetop == 1 %]style="visibility:hidden; display:none;"[% END %]>
       <tr>
         <td align="left" valign="top" width="33%">
@@ -103,9 +104,11 @@
         </td>
       </tr>
     </table>
+[% END %]
 
     [% PROCESS _status_detail_table.tt %]
 
+    [% UNLESS minimal %]
     [% UNLESS authorized_for_read_only %]
     <div class="hint">
         <a href="#" onclick="selectAllServices(true,'[% paneprefix %]');return false;">select all</a> (<a href="#" onclick="selectAllHosts(true,'[% paneprefix %]');">hosts</a>)
@@ -118,6 +121,7 @@
     <div align="center">[% PROCESS _pager.tt %]</div>
 
     <br>
+    [% END %]
     <div class='itemTotalsTitle'>[% IF !has_error && data.size %][% data.size %] of [% pager.total_entries %][% ELSE %]0[% END %] Matching Service Entries Displayed</div>
 
 [% PROCESS _footer.tt %]
